# BISDEM

./: .directory  .gitignore  README.md  genindex.html  gh-pages  index.html  objects.inv  pkgdocs.html  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py  srcdocs.html  usage.html
.doctrees/: environment.pickle  index.doctree  pkgdocs.doctree  srcdocs.doctree  usage.doctree
_modules/: index.html
_modules/wingse/: aero.html  lib.html  struc.html
_sources/: pkgdocs.txt  srcdocs.txt  usage.txt
docs/: Makefile  conf.py  index.rst  make.bat
examples/: BEM_example.py  airfoil_example.py  mechopt.py  plot_motion.py  plot_speeds.py  plot_speeds_and_twist.py  test.py
src/BISDEM/MechSE/: init.py  motion.py
src/BISDEM/MechSE/test/: test_mechse.py
src/BISDEM/PowerSE/: controller.py  motor.py
src/BISDEM/PowerSE/test/: test_powerse.py
src/BISDEM/WingSE/: aeroloads.py  init.py  motion.py  speeds.py  twist.py  wingsurface.py
src/BISDEM/lib/: geo.py  plot.py  vartrees.py
src/bisdem/wingse/: init.py
src/fusedwind/turbine/: configurations.py  geometry.py  geometry_vt.py
src/wingse/test/: test_wingse.py
test/: motor_test.py  wingsurface_test.py
