[metadata]
name = BISDEM
version = 0.1
summary = 
description-file = README.md
keywords = openmdao
home-page = 
download-url = 
author = BirdPlane
author-email = info@birdplane.nl
maintainer = Bastian Telgen
maintainer-email = bastian@birdplane.nl
license = 
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = openmdao.main
provides-dist = 
obsoletes-dist = 
requires-python = 
	>=2.7
	<3.0
requires-externals = 
project-url = 

[openmdao]
copyright = 
static_path = [ '_static' ]

